--- a/locale/pt_PT/LC_MESSAGES/messages.po
+++ b/locale/pt_PT/LC_MESSAGES/messages.po
@@ -2,16 +2,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: WebPay\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-09-25 11:27+0000\n"
-"PO-Revision-Date: 2014-07-04 03:29+0100\n"
-"Last-Translator: Cláudio Esperança <cesperanc@gmail.com>\n"
+"POT-Creation-Date: 2014-09-01 10:55+0000\n"
+"PO-Revision-Date: 2014-09-28 17:20+0000\n"
+"Last-Translator: Cláudio <cesperanc@gmail.com>\n"
 "Language-Team: Cláudio Esperança <cesperanc+mozilla@gmail.com>\n"
 "Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.4\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.5.0\n"
+"X-POOTLE-MTIME: 1411924838.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
 msgid "Payment cancelled."
@@ -20,12 +21,10 @@ msgstr "Pagamento cancelado."
 #: public/js/views/create-pin.js:105 templates/error.html:20
 #: templates/pin-form.html:26 public/js/views/create-pin.js:104
 #: public/js/views/error.js:51 templates/simulate.html:17
-#: public/js/views/create-pin.js:140 templates/pin-form.html:37
 msgid "Cancel"
 msgstr "Cancelar"
 
 #: public/js/lib/pin-widget.js:58 public/js/lib/pin-widget.js:64
-#: public/js/lib/pin-widget.js:68
 msgid "PIN can only contain digits."
 msgstr "O PIN só pode conter dígitos."
 
@@ -67,7 +66,6 @@ msgstr "Algo correu mal. Tentar novamente?"
 
 #: templates/error.html:27 public/js/views/error.js:52
 #: public/js/views/error.js:87 public/js/views/locked.js:24
-#: templates/iframe-overlay.html:14
 msgid "OK"
 msgstr "OK"
 
@@ -78,19 +76,17 @@ msgstr "Erro"
 
 #: public/js/views/enter-pin.js:96 public/js/views/enter-pin.js:100
 #: public/js/views/enter-pin.js:97 public/js/views/enter-pin.js:101
-#: public/js/views/enter-pin.js:105
 msgid "Enter PIN"
 msgstr "Introduzir PIN"
 
 #: public/js/views/login.js:25 templates/login.html:5
 #: public/js/views/fxa-login.js:25 public/js/views/fxa-login.js:27
 #: public/js/views/login.js:24 public/js/views/login.js:26
-#: public/js/views/fxa-login.js:26 public/js/views/fxa-login.js:28
 msgid "Sign In"
 msgstr "Iniciar sessão"
 
 #: templates/login.html:6 public/js/views/fxa-login.js:28
-#: public/js/views/login.js:27 public/js/views/fxa-login.js:29
+#: public/js/views/login.js:27
 msgid "Sign in to continue with the payment"
 msgstr "Iniciar sessão para continuar com o pagamento"
 
@@ -102,16 +98,14 @@ msgstr "Iniciar sessão"
 #: public/js/views/reset-pin.js:64 templates/reset-start.html:12
 #: templates/was-locked.html:12 public/js/views/create-pin.js:105
 #: public/js/views/create-pin.js:112 templates/simulate.html:18
-#: public/js/views/create-pin.js:141 public/js/views/create-pin.js:148
 msgid "Continue"
 msgstr "Continuar"
 
 #: public/js/views/enter-pin.js:73 public/js/views/enter-pin.js:74
-#: public/js/views/enter-pin.js:78
 msgid "Wrong PIN"
 msgstr "PIN errado"
 
-#: public/js/views/create-pin.js:48 public/js/views/create-pin.js:84
+#: public/js/views/create-pin.js:48
 msgid "PINs do not match."
 msgstr "Os PINs não coincidem."
 
@@ -120,7 +114,7 @@ msgid "Create a PIN"
 msgstr "Criar um PIN"
 
 #: webpay/pin/views.py:68 webpay/pin/views.py:185
-#: public/js/views/create-pin.js:36 public/js/views/create-pin.js:71
+#: public/js/views/create-pin.js:36
 msgid "Confirm PIN"
 msgstr "Confirmar PIN"
 
@@ -134,7 +128,6 @@ msgstr "Repor PIN"
 #. This is the same as the standard forgot
 #. password that most sites have.
 #: templates/pin-form.html:18 templates/reset-start.html:6
-#: templates/pin-form.html:29
 msgid "Forgot your PIN?"
 msgstr "Esqueceu-se do seu PIN?"
 
@@ -181,13 +174,11 @@ msgid "That took longer than expected. Retry?"
 msgstr "Isto está a demorar mais do que era esperado. Tentar novamente?"
 
 #: public/js/views/create-pin.js:37 templates/reset-start.html:11
-#: public/js/views/create-pin.js:72
 msgid "Back"
 msgstr "Voltar"
 
 #: public/js/views/create-pin.js:38 public/js/views/enter-pin.js:95
-#: public/js/views/enter-pin.js:96 public/js/views/create-pin.js:73
-#: public/js/views/enter-pin.js:100
+#: public/js/views/enter-pin.js:96
 msgid "Submit"
 msgstr "Submeter"
 
@@ -195,14 +186,12 @@ msgstr "Submeter"
 #: public/js/views/reset-pin.js:28 public/js/lib/wait.js:171
 #: public/js/views/create-pin.js:65 public/js/views/enter-pin.js:61
 #: public/js/views/force-auth.js:53 public/js/views/reset-pin.js:29
-#: public/js/views/reset-start.js:107 public/js/views/create-pin.js:101
-#: public/js/views/enter-pin.js:65 public/js/views/reset-start.js:108
+#: public/js/views/reset-start.js:107
 msgid "Retry?"
 msgstr "Tentar novamente?"
 
 #: public/js/views/create-pin.js:114 public/js/views/create-pin.js:116
 #: public/js/views/create-pin.js:113 public/js/views/create-pin.js:115
-#: public/js/views/create-pin.js:149 public/js/views/create-pin.js:152
 msgid "Create PIN"
 msgstr "Criar um PIN"
 
@@ -211,7 +200,6 @@ msgid "Something went wrong."
 msgstr "Algo correu mal."
 
 #: public/js/views/reset-start.js:29 public/js/views/reset-start.js:118
-#: public/js/views/reset-start.js:119
 msgid "Reset your PIN?"
 msgstr "Repor o seu PIN?"
 
@@ -225,139 +213,137 @@ msgstr "A definir o pagamento"
 
 #: public/js/error-codes.js:12
 msgid "An internal web request timed out."
-msgstr ""
+msgstr "Um pedido web interno expirou."
 
 #: public/js/error-codes.js:13
 msgid "The system timed out while trying to log in."
-msgstr ""
+msgstr "O sistema expirou enquanto tentava iniciar sessão."
 
 #: public/js/error-codes.js:14
 msgid "An error occurred whilst trying to log out."
-msgstr ""
+msgstr "Ocorreu um erro durante a tentativa de fim da sessão."
 
 #: public/js/error-codes.js:15
 msgid "The system timed out while trying to log out."
-msgstr ""
+msgstr "O sistema expirou durante a tentativa de fim da sessão."
 
 #: public/js/error-codes.js:16
 msgid "Payments are temporarily disabled."
-msgstr ""
+msgstr "Os pagamentos estão temporariamente desativados."
 
 #: public/js/error-codes.js:17
 msgid "An unexpected error occurred when creating your PIN."
-msgstr ""
+msgstr "Ocorreu um erro inesperado ao criar o seu PIN."
 
 #: public/js/error-codes.js:18 public/js/error-codes.js:27
 msgid "The PIN data submitted was invalid."
-msgstr ""
+msgstr "Os dados do PIN submetidos são inválidos."
 
 #: public/js/error-codes.js:19
 msgid "No valid user found whilst attempting to create your PIN"
 msgstr ""
+"Não foi encontrado um utilizador válido durante a tentativa de criação do "
+"seu PIN"
 
 #: public/js/error-codes.js:20
 msgid "Permission denied attempting to create your PIN."
-msgstr ""
+msgstr "Permissão negada na tentativa de criação do seu PIN."
 
 #: public/js/error-codes.js:21
 msgid "The request timed out whilst attempting to create your PIN."
-msgstr ""
+msgstr "O pedido expirou durante a tentativa de criação do seu PIN."
 
 #: public/js/error-codes.js:22
 msgid "An unexpected error occurred whilst checking your PIN."
-msgstr ""
+msgstr "Ocorreu um erro inesperado na tentativa de verificação do seu PIN."
 
 #: public/js/error-codes.js:23
 msgid "No valid user found whilst checking your PIN"
 msgstr ""
+"Não foi encontrado um utilizar válido durante a tentativa de validação do "
+"PIN"
 
 #: public/js/error-codes.js:24
 msgid "Permission denied attempting to check your PIN"
-msgstr ""
+msgstr "Permissão negada na tentativa de verificação do seu PIN"
 
 #: public/js/error-codes.js:25
 msgid "The request timed out whilst trying to check your PIN"
-msgstr ""
+msgstr "O pedido expirou na tentativa de verificação do seu PIN"
 
 #: public/js/error-codes.js:26
 msgid "An unexpected error occurred when resetting your PIN."
-msgstr ""
+msgstr "Ocorreu um erro inesperado na tentativa de reposição do seu PIN."
 
 #: public/js/error-codes.js:28
 msgid "No valid user found whilst attempting to reset your PIN"
 msgstr ""
+"Não foi encontrado um utilizador válido na tentativa de reposição do seu PIN"
 
 #: public/js/error-codes.js:29
 msgid "Permission denied attempting to reset your PIN."
-msgstr ""
+msgstr "Permissão negada na tentativa de reposição do seu PIN."
 
 #: public/js/error-codes.js:30
 msgid "The request timed out whilst attempting to reset your PIN."
-msgstr ""
+msgstr "O pedido expirou na tentativa de reposição do seu PIN."
 
 #: public/js/error-codes.js:31
 msgid "The transaction failed. You have not been charged for this purchase."
-msgstr ""
+msgstr "A transação falhou. Não foi cobrado qualquer valor para esta compra."
 
 #: public/js/error-codes.js:32
 msgid ""
 "The payment method or price point is not supported for this region or "
 "operator."
 msgstr ""
+"O método de pagamento ou o ponto do preço não são suportados por esta região "
+"ou operador."
 
 #: public/js/lib/auth.js:214
 msgid "Waiting for login"
-msgstr ""
+msgstr "A aguardar pela autenticação"
 
 #: public/js/lib/wait.js:56
 msgid "Retrieving Transaction"
-msgstr ""
+msgstr "A obter a transação"
 
 #: public/js/views/error.js:55
 msgid "An unexpected error occurred."
-msgstr ""
+msgstr "Ocorreu um erro inesperado."
 
 #: public/js/views/force-auth.js:87
 msgid "Sign-in to reset PIN"
-msgstr ""
+msgstr "Inicie sessão para repor o PIN"
 
 #: public/js/views/force-auth.js:90
 msgid "Please sign in to reset your PIN."
-msgstr ""
+msgstr "Por favor, inicie sessão para repor o seu PIN."
 
 #: public/js/views/init.js:12
 msgid "Initializing"
-msgstr ""
+msgstr "A inicializar"
 
 #: public/js/views/locked.js:21
-#, fuzzy
 msgid "PIN Locked"
-msgstr "Foi bloqueado"
+msgstr "PIN bloqueado"
 
 #: public/js/views/payment-success.js:15 public/js/views/wait-to-finish.js:14
-#, fuzzy
 msgid "Completing payment"
-msgstr "A definir o pagamento"
+msgstr "A concluir o pagamento"
 
 #: public/js/views/simulate.js:23
 msgid "Processing"
-msgstr ""
+msgstr "A processar"
 
 #: public/js/views/simulate.js:51
 msgid "Simulate Payment"
-msgstr ""
+msgstr "Simular pagamento"
 
 #: public/js/views/simulate.js:55
 msgid "You will not be charged."
-msgstr ""
+msgstr "Não lhe será cobrado nenhum valor."
 
 #: templates/reset-start.html:12
-#, fuzzy
 msgid "Reset"
-msgstr "Repor PIN"
-
-#: templates/pin-form.html:22
-msgid ""
-"By proceeding you agree to our <a %(terms)s>terms</a> and <a %(privacy)"
-"s>Privacy Policy</a>"
-msgstr ""
+msgstr "Repor"
