--- a/locale/nb_NO/LC_MESSAGES/messages.po
+++ b/locale/nb_NO/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-11-28 17:19+0000\n"
-"PO-Revision-Date: 2014-07-02 09:26+0000\n"
+"PO-Revision-Date: 2015-01-24 20:30+0000\n"
 "Last-Translator: Håvar <havar@firefox.no>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: nb_NO\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1404293211.0\n"
+"X-POOTLE-MTIME: 1422131451.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
 #: public/js/lib/cancel.js:18
@@ -147,7 +147,7 @@ msgstr "Bekreft sikkerhetskode"
 #: public/js/views/reset-pin.js:69 public/js/views/force-auth.js:101
 #: public/js/views/reset-pin.js:72
 msgid "Reset PIN"
-msgstr "Nullstill sikkerhetskode"
+msgstr "Nullstill PIN-kode"
 
 #. This is the same as the standard forgot
 #. password that most sites have.
@@ -173,17 +173,17 @@ msgid ""
 "Your PIN was locked because you entered it incorrectly too many times. You "
 "can continue and try entering your PIN again or reset your PIN."
 msgstr ""
-"Din sikkerhetskode var låst fordi du skrev det feil for mange ganger. Du kan "
-"fortsette og prøve å skrive inn sikkerhetskoden igjen, eller tilbakestille "
-"sikkerhetskoden."
+"Din PIN-kode ble sperret fordi du tastet den feil for mange ganger. Du kan "
+"fortsette og prøve å skrive inn PIN-koden igjen, eller nullstille din PIN-"
+"kode."
 
 #: templates/reset-start.html:7 templates/reset-start.html:10
 msgid ""
 "Are you sure you want to reset your PIN? You must sign in to Persona to "
 "reset your PIN."
 msgstr ""
-"Er du sikker på at du vil tilbakestille din sikkerhetskode? Du må logge deg "
-"på Persona for å tilbakestille sikkerhetskoden."
+"Er du sikker på at du vil nullstille din PIN-kode? Du må logge deg på "
+"Persona for å nullstille PIN-koden."
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
@@ -256,168 +256,170 @@ msgstr "Sett opp betalingen "
 
 #: public/js/error-codes.js:12
 msgid "An internal web request timed out."
-msgstr ""
+msgstr "En intern webforespørsel fikk tidsavbrudd."
 
 #: public/js/error-codes.js:13
 msgid "The system timed out while trying to log in."
-msgstr ""
+msgstr "Systemet ble tidsavbrutt under forsøket på å logge inn."
 
 #: public/js/error-codes.js:14
 msgid "An error occurred whilst trying to log out."
-msgstr ""
+msgstr "Det oppstod en feil under forsøket på å logge ut."
 
 #: public/js/error-codes.js:15
 msgid "The system timed out while trying to log out."
-msgstr ""
+msgstr "Systemet ble tidsavbrutt under forsøket på å logge ut."
 
 #: public/js/error-codes.js:16
 msgid "Payments are temporarily disabled."
-msgstr ""
+msgstr "Betalinger er midlertidig deaktivert."
 
 #: public/js/error-codes.js:17
 msgid "An unexpected error occurred when creating your PIN."
-msgstr ""
+msgstr "Det oppstod en uventet feil ved oppretting av PIN-koden."
 
 #: public/js/error-codes.js:18 public/js/error-codes.js:27
 msgid "The PIN data submitted was invalid."
-msgstr ""
+msgstr "De innsendte PIN-kode-dataene var ugyldig."
 
 #: public/js/error-codes.js:19
 msgid "No valid user found whilst attempting to create your PIN"
-msgstr ""
+msgstr "Ingen gyldig bruker funnet under forsøket på å opprette din PIN-kode"
 
 #: public/js/error-codes.js:20
 msgid "Permission denied attempting to create your PIN."
-msgstr ""
+msgstr "Tillatelse nektet under forsøket på å opprette din PIN-kode."
 
 #: public/js/error-codes.js:21
 msgid "The request timed out whilst attempting to create your PIN."
 msgstr ""
+"Forespørselen ble tidsavbrutt under forsøket på å opprette din PIN-kode."
 
 #: public/js/error-codes.js:22
 msgid "An unexpected error occurred whilst checking your PIN."
-msgstr ""
+msgstr "En uventet feil oppsto under kontroll av din PIN-kode."
 
 #: public/js/error-codes.js:23
 msgid "No valid user found whilst checking your PIN"
-msgstr ""
+msgstr "Ingen gyldig bruker funnet under kontroll av din PIN-kode"
 
 #: public/js/error-codes.js:24
 msgid "Permission denied attempting to check your PIN"
-msgstr ""
+msgstr "Tillatelse nektet under forsøket på å kontrollere din PIN-kode"
 
 #: public/js/error-codes.js:25
 msgid "The request timed out whilst trying to check your PIN"
 msgstr ""
+"Forespørselen ble tidsavbrutt under forsøket på å kontrollere din PIN-kode"
 
 #: public/js/error-codes.js:26
 msgid "An unexpected error occurred when resetting your PIN."
-msgstr ""
+msgstr "Det oppstod en uventet feil under nullstilling av PIN-koden."
 
 #: public/js/error-codes.js:28
 msgid "No valid user found whilst attempting to reset your PIN"
-msgstr ""
+msgstr "Ingen gyldig bruker funnet under forsøket på å nullstille din PIN-kode"
 
 #: public/js/error-codes.js:29
 msgid "Permission denied attempting to reset your PIN."
-msgstr ""
+msgstr "Tillatelse nektet under forsøket på å nullstille din PIN-kode."
 
 #: public/js/error-codes.js:30
 msgid "The request timed out whilst attempting to reset your PIN."
 msgstr ""
+"Forespørselen ble tidsavbrutt under forsøket på å nullstille din PIN-kode."
 
 #: public/js/error-codes.js:31
 msgid "The transaction failed. You have not been charged for this purchase."
-msgstr ""
+msgstr "Transaksjonen mislyktes. Du har ikke blitt belastet for dette kjøpet."
 
 #: public/js/error-codes.js:32
 msgid ""
 "The payment method or price point is not supported for this region or "
 "operator."
 msgstr ""
+"Betalingsmetoden eller prisnivået støttes ikke for denne regionen eller av "
+"denne operatøren."
 
 #: public/js/lib/auth.js:214
 msgid "Waiting for login"
-msgstr ""
+msgstr "Venter på pålogging"
 
 #: public/js/lib/wait.js:56
 msgid "Retrieving Transaction"
-msgstr ""
+msgstr "Henter transaksjon"
 
 #: public/js/views/error.js:55 public/js/views/error.js:58
 msgid "An unexpected error occurred."
-msgstr ""
+msgstr "Det oppsto en uventet feil."
 
 #: public/js/views/force-auth.js:87 public/js/views/force-auth.js:100
 #: public/js/views/force-auth.js:99
 msgid "Sign-in to reset PIN"
-msgstr ""
+msgstr "Logg inn for å nullstille PIN-koden"
 
 #: public/js/views/force-auth.js:90 public/js/views/force-auth.js:103
 #: public/js/views/force-auth.js:102
 msgid "Please sign in to reset your PIN."
-msgstr ""
+msgstr "Logg inn for å nullstille PIN-koden"
 
 #: public/js/views/init.js:12
 msgid "Initializing"
-msgstr ""
+msgstr "Initialiserer"
 
 #: public/js/views/locked.js:21
-#, fuzzy
 msgid "PIN Locked"
-msgstr "Ble låst"
+msgstr "PIN-kode låst"
 
 #: public/js/views/payment-success.js:15 public/js/views/wait-to-finish.js:14
-#, fuzzy
 msgid "Completing payment"
-msgstr "Sett opp betalingen "
+msgstr "Fullfører betalingen"
 
 #: public/js/views/simulate.js:23
 msgid "Processing"
-msgstr ""
+msgstr "Behandler"
 
 #: public/js/views/simulate.js:51
 msgid "Simulate Payment"
-msgstr ""
+msgstr "Simuler betaling"
 
 #: public/js/views/simulate.js:55
 msgid "You will not be charged."
-msgstr ""
+msgstr "Du vil ikke bli belastet."
 
 #: templates/reset-start.html:12 templates/reset-start.html:16
-#, fuzzy
 msgid "Reset"
-msgstr "Nullstill sikkerhetskode"
+msgstr "Nullstill"
 
 #: templates/pin-form.html:22
 msgid ""
 "By proceeding you agree to our <a %(terms)s>terms</a> and <a "
 "%(privacy)s>Privacy Policy</a>"
 msgstr ""
+"Ved å fortsette, godtar du våre <a %(terms)s>vilkår</a> og <a %"
+"(privacy)s>personvernspolitikk</a>"
 
 #: public/js/views/force-auth.js:91 public/js/views/reset-start.js:68
 #: public/js/views/force-auth.js:90 public/js/views/reset-start.js:70
-#, fuzzy
 msgid "Connecting to Firefox Accounts"
-msgstr "Kobler til Persona"
+msgstr "Kobler til Firefox Accounts"
 
 #: templates/reset-start.html:8
-#, fuzzy
 msgid ""
 "Are you sure you want to reset your PIN? You must sign in to Firefox "
 "Accounts to reset your PIN."
 msgstr ""
-"Er du sikker på at du vil tilbakestille din sikkerhetskode? Du må logge deg "
-"på Persona for å tilbakestille sikkerhetskoden."
+"Er du sikker på at du vil nullstille din PIN-kode? Du må logge deg på "
+"Firefox Accounts for å nullstille PIN-koden."
 
 #: public/js/views/page.js:34
 msgid "Logging out"
-msgstr ""
+msgstr "Logger ut"
 
 #: templates/signout.html:9
 msgid "You are signed in as:"
-msgstr ""
+msgstr "Du er logget inn som:"
 
 #: templates/signout.html:11
 msgid "Not you?"
-msgstr ""
+msgstr "Ikke deg?"
