--- a/locale/nb_NO/LC_MESSAGES/messages.po
+++ b/locale/nb_NO/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-11-28 17:19+0000\n"
-"PO-Revision-Date: 2015-01-24 20:30+0000\n"
+"PO-Revision-Date: 2015-01-24 23:10+0000\n"
 "Last-Translator: Håvar <havar@firefox.no>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: nb_NO\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1422131451.0\n"
+"X-POOTLE-MTIME: 1422141040.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16
 #: public/js/lib/cancel.js:18
@@ -402,7 +402,7 @@ msgstr ""
 #: public/js/views/force-auth.js:91 public/js/views/reset-start.js:68
 #: public/js/views/force-auth.js:90 public/js/views/reset-start.js:70
 msgid "Connecting to Firefox Accounts"
-msgstr "Kobler til Firefox Accounts"
+msgstr "Kobler til Firefox-konti"
 
 #: templates/reset-start.html:8
 msgid ""
@@ -410,7 +410,7 @@ msgid ""
 "Accounts to reset your PIN."
 msgstr ""
 "Er du sikker på at du vil nullstille din PIN-kode? Du må logge deg på "
-"Firefox Accounts for å nullstille PIN-koden."
+"Firefox-konti for å nullstille PIN-koden."
 
 #: public/js/views/page.js:34
 msgid "Logging out"
